--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^18.1.0",
+    "redux-observable": "^0.12.2",
+    "rxjs": "^5.0.3",
     "standard": "^8.6.0"
   }
 }
