--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^18.1.0",
     "redux-observable": "^0.12.2",
+    "redux-saga": "^0.14.2",
     "rxjs": "^5.0.3",
     "standard": "^8.6.0"
   }
