--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^18.1.0",
+    "redux": "^3.6.0",
     "redux-observable": "^0.12.2",
     "redux-saga": "^0.14.2",
     "rxjs": "^5.0.3",
