--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npm run lint && babel src -d lib --ignore \"**/*.test.js\" ",
     "lint": "standard --fix",
-    "test": "jest --watch",
+    "test": "jest",
+    "dev": "jest --watch",
     "prepublish": "npm run build"
   },
   "repository": {
