--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.18.0",
     "jest-cli": "^18.1.0",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.2",
     "redux-observable": "^0.12.2",
     "redux-saga": "^0.14.2",
     "rxjs": "^5.0.3",
